src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__env-3.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.dump()
---
min_version = "2024.1.1"
[env]
foo="bar"

