src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__env-4.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf
---
MiseToml(~/cwd/.test.mise.toml): ToolRequestSet: <empty> {
    min_version: MinVersionSpec {
        hard: Some(
            Ideal(
                SemVer {
                    major: 2024,
                    minor: 1,
                    patch: 1,
                    pre_rel: None,
                    meta: None,
                },
            ),
        ),
        soft: None,
    },
    env: [
        Val(
            "foo",
            "bar",
            EnvDirectiveOptions {
                tools: false,
                redact: None,
                required: False,
                expand: false,
                prompt: None,
            },
        ),
        Val(
            "foo2",
            "qux\\nquux",
            EnvDirectiveOptions {
                tools: false,
                redact: None,
                required: False,
                expand: false,
                prompt: None,
            },
        ),
        Val(
            "foo3",
            "qux\nquux",
            EnvDirectiveOptions {
                tools: false,
                redact: None,
                required: False,
                expand: false,
                prompt: None,
            },
        ),
    ],
}
