src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__env_var_in_tool.snap
---
source: src/config/config_file/mise_toml.rs
expression: "replace_path(&format!(\"{:#?}\", cf.to_tool_request_set().unwrap().tools))"
---
{
    BackendArg(terraform): [
        Version {
            backend: BackendArg(terraform),
            version: "1.0.0",
            options: ToolOptions {
                core: CoreToolOptions {
                    os: None,
                    depends: None,
                    install_env: {},
                    lazy: None,
                    lazy_bins: [],
                    auto_update: None,
                },
                opts: RawBackendOptions {
                    values: {},
                },
            },
            source: MiseToml(
                "~/cwd/.test.mise.toml",
            ),
            lockfile_scope: Default,
        },
    ],
    BackendArg(jq): [
        Prefix {
            backend: BackendArg(jq),
            prefix: "1.6",
            options: ToolOptions {
                core: CoreToolOptions {
                    os: None,
                    depends: None,
                    install_env: {},
                    lazy: None,
                    lazy_bins: [],
                    auto_update: None,
                },
                opts: RawBackendOptions {
                    values: {},
                },
            },
            source: MiseToml(
                "~/cwd/.test.mise.toml",
            ),
            lockfile_scope: Default,
        },
    ],
}
