src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__fixture-2.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.settings().unwrap()
---
{
  "experimental": null,
  "color": null,
  "always_keep_download": null,
  "always_keep_install": null,
  "legacy_version_file": null,
  "legacy_version_file_disable_tools": [
    "disabled_tool_from_legacy_file"
  ],
  "plugin_autoupdate_last_check_duration": null,
  "trusted_config_paths": null,
  "log_level": null,
  "trace": null,
  "debug": null,
  "verbose": true,
  "quiet": null,
  "asdf_compat": null,
  "jobs": null,
  "shorthands_file": null,
  "disable_default_shorthands": null,
  "disable_tools": [
    "disabled_tool"
  ],
  "raw": null,
  "yes": null,
  "task_output": null,
  "not_found_auto_install": null,
  "ci": null,
  "env_file": null,
  "cd": null
}
