src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__fixture-4.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.alias
---
{
    ForgeArg("node"): {
        "my_custom_node": "18",
    },
}
