src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__fixture-5.snap
---
source: src/config/config_file/mise_toml.rs
expression: "replace_path(&format!(\"{:#?}\", cf))"
---
MiseToml(~/fixtures/.mise.toml): ToolRequestSet: terraform@1.0.0 node@18 node@prefix:20 node@ref:master node@path:~/.nodes/18 jq@prefix:1.6 shellcheck@0.9.0 python@3.10.0 python@3.9.0 {
    env: [
        Val(
            "NODE_ENV",
            "production",
            EnvDirectiveOptions {
                tools: false,
                redact: None,
                required: False,
                expand: false,
                prompt: None,
            },
        ),
    ],
    alias: {
        "node": Alias {
            backend: None,
            versions: {
                "my_custom_node": "18",
            },
        },
    },
    plugins: {
        "node": "https://github.com/jdx/rtx-node",
    },
}
