src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__fixture.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.env_entries().unwrap()
---
[
    Val(
        "NODE_ENV",
        "production",
        EnvDirectiveOptions {
            tools: false,
            redact: None,
            required: False,
            expand: false,
            prompt: None,
        },
    ),
]
