src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__path_dirs-3.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.dump()
---
env_path=["/foo", "./bar"]
[env]
foo="bar"

